src/components/common/house-selector/house-selector.module.css
.options-body{
    display: flex;
    flex-direction: column;
    gap:10px;
    max-height: 70vh;
    overflow-y: auto;
    padding: 11px;
}

.option-item{
    transition: ease-in 0.3s;
    -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
    -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
    border-radius: 20px;
    padding: 10px;
}

.option-item:hover{
    transition: ease-in 0.3s;
    box-shadow:0px 5px 10px 2px hsla(259, 100%, 60%, 0.3);
}
.option-item__selected{
    transition: ease-in 0.3s;
    box-shadow:0px 5px 10px 2px hsla(259, 100%, 60%, 0.5);
}
.option-item__selected:hover{
    transition: ease-in 0.3s;
    box-shadow:0px 5px 10px 2px hsla(259, 100%, 60%, 0.5);
}

